--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1> Hello World !! </h1>
+<html>
+  <head>
+    <title>My Website</title>
+  </head>
+<body>
+
+<p>Welcome to my website.</p>
+
+</body>
+</html>
